tests/reference/asr-expr10-efcbb1b.stderr
semantic error: Variable 'a' not declared
  --> tests/expr10.py:23:5
   |
23 |     a = +True
   |     ^ 
